After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 631837 - gdk_pixbuf_xlib_init_with_depth does not honour the requested depth
gdk_pixbuf_xlib_init_with_depth does not honour the requested depth
Status: RESOLVED FIXED
Product: gdk-pixbuf
Classification: Platform
Component: general
git master
Other All
: Normal normal
: ---
Assigned To: gdk-pixbuf-maint
gdk-pixbuf-maint
Depends on:
Blocks:
 
 
Reported: 2010-10-10 21:49 UTC by Emanuele Giaquinta
Modified: 2014-10-21 18:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdk_pixbuf_xlib_init_with_depth fix (1.12 KB, patch)
2010-10-10 21:50 UTC, Emanuele Giaquinta
committed Details | Review

Description Emanuele Giaquinta 2010-10-10 21:49:20 UTC
The function gdk_pixbuf_xlib_init_with_depth does not select a visual with the requested depth even if such a visual exists. The problem is in the function xlib_rgb_choose_visual_for_xprint which ignores its argument. A patch is attached.
Comment 1 Emanuele Giaquinta 2010-10-10 21:50:46 UTC
Created attachment 172064 [details] [review]
gdk_pixbuf_xlib_init_with_depth fix