xlib: Honour requested depth

Honour requested depth in gdk_pixbuf_xlib_init_with_depth.
The function xlib_rgb_choose_visual_for_xprint ignores its argument;
add it to the template so that XGetVisualInfo can do the right thing.

https://bugzilla.gnome.org/show_bug.cgi?id=631837